# sumologic-mcp-server

./: .env.example  .gitignore  README.md  check_credentials.py  claude_config.json  debug_detailed.py  debug_search.py  explore_vmware_data.py  explore_vmware_detailed.py  get_vmware_samples.py  mcp_status.md  pyproject.toml  setup_and_run.py  simple_test.py  start_server.sh  start_server_background.sh  stop_server.sh  test_connection.py  test_endpoints.py  test_full_flow.py  test_mcp_tools.py  test_messages.py  test_records.py  test_search.py  test_time_parsing.py  test_vmware_data.py  vmware_dashboard_queries.md
sumologic_mcp_server/: __init__.py  client.py  server.py
tests/: test_client.py
